--- a/_programme/Events/2022.md
+++ b/_programme/Events/2022.md
@@ -6,3 +6,28 @@ third_nav_title: Events
 ---
 #### Chinese New Year 2022
 
+![](/images/Programme/Events%202022/CNY1.jpg)
+
+![](/images/Programme/Events%202022/CNY2.jpg)
+
+![](/images/Programme/Events%202022/CNY3.jpg)
+
+![](/images/Programme/Events%202022/CNY4.jpg)
+
+![](/images/Programme/Events%202022/CNY5.jpg)
+
+![](/images/Programme/Events%202022/CNY6.jpg)
+
+![](/images/Programme/Events%202022/CNY7.jpg)
+
+![](/images/Programme/Events%202022/CNY8.jpg)
+
+![](/images/Programme/Events%202022/CNY9.jpg)
+
+![](/images/Programme/Events%202022/CNY10.jpg)
+
+![](/images/Programme/Events%202022/CNY11.jpg)
+
+![](/images/Programme/Events%202022/CNY12.jpg)
+
+![](/images/Programme/Events%202022/CNY13.jpg)
